syntax = "proto3";

option csharp_namespace = "com.mirle.AK0.ProtocolFormat.VehicleControlPublishMessage";

//Start Transfet Info
enum TranStatus {
    TranStatus_Queue = 0;
    TranStatus_Initial = 1;
    TranStatus_PreInitial = 2;
    TranStatus_Transferring = 3;
    TranStatus_Canceling = 4;
    TranStatus_Aborting = 5;
    TranStatus_Canceled = 6;
    TranStatus_Aborted = 7;
    TranStatus_Complete = 8;
    TranStatus_RouteChanging = 9;
    TranStatus_Reject = 10;
}

message TransferCommandInfo {
	int64 LAST_UPDATE_TIME = 1;
	repeated TransferCommand infos = 2;
}

message TransferCommand {
	string CMD_ID = 1;
	string CARRIER_ID = 2;
	TranStatus TRANSFERSTATE = 3;
	int32 COMMANDSTATE = 4;
	string HOSTSOURCE = 5;
	string HOSTDESTINATION = 6;
	int32 PRIORITY = 7;
	string CHECKCODE = 8;
	string PAUSEFLAG = 9;
	int64 CMD_INSER_TIME = 10;
	int64 CMD_START_TIME = 11;
	int64 CMD_FINISH_TIME = 12;
	int32 TIME_PRIORITY = 13;
	int32 PORT_PRIORITY = 14;
	int32 PRIORITY_SUM = 15;
	int32 REPLACE = 16;
    string DESCRIPTION = 17;
}
//End Transfet Info

//Start Task Info
enum CmdType {
    CmdType_Move = 0;
    CmdType_MovePark = 1;
    CmdType_MoveMTPort = 2;
    CmdType_Load = 3;
    CmdType_Unload = 4;
    CmdType_LoadUnload = 5;
    CmdType_Teaching = 6;
    CmdType_Continue = 7;
    CmdType_Round = 8;
    CmdType_Home = 9;
    CmdType_Override = 10;
    CmdType_MTLHome = 11;
    CmdType_MoveToMTL = 12;
    CmdType_SystemOut = 13;
    CmdType_SystemIn = 14;
    CmdType_Scan = 15;
}
enum CmdStatus {
    CmdStatus_Queue = 0;
    CmdStatus_Sending = 1;
    CmdStatus_Execution = 2;
    CmdStatus_Aborting = 3;
    CmdStatus_Canceling = 4;
    CmdStatus_NormalEnd = 5;
    CmdStatus_AbnormalEndByOHT = 6;
    CmdStatus_AbnormalEndByMCS = 7;
    CmdStatus_AbnormalEndByOHTC = 8;
    CmdStatus_CancelEndByOHTC = 9;
}


message TaskCommandInfo {
	int64 LAST_UPDATE_TIME = 1;
	repeated TaskCommand infos = 2;
}

message TaskCommand {
	string CMD_ID = 1;
	string VH_ID = 2;
	string CMD_ID_MCS = 3;
	CmdType CMD_TPYE = 4;
	string SOURCE = 5;
	string DESTINATION = 6;
	int32 PRIORITY = 7;
	int64 CMD_START_TIME = 8;
	int64 CMD_END_TIME = 9;
	CmdStatus CMD_STATUS = 10;
	int32 CMD_PROGRESS = 11;
	int32 INTERRUPTED_REASON = 12;
	string SOURCE_ADR = 13;
	string DESTINATION_ADR = 14;
	string BOX_ID = 15;
	string LOT_ID = 16;
	int64 CMD_INSER_TIME = 17;
}
//End Task Info

//Start Line Info
message LineInfo {
    bool IsConnectionWithHOST = 1;
    bool IsConnectionWithPLC_MANUAL = 2;
    bool IsConnectionWithPLC_TRACK1 = 3;
    bool IsConnectionWithPLC_TRACK2 = 4;
}//End Line Info

message alarm{
        string EQ_ID = 1;
        string Unit_ID = 2;
        string RPT_dateTime = 3;
        string Code = 4;
        string level = 5;
        string alarmStatus = 6;
        string alarmAffectCount = 7;
        string Description = 8;
}

message alarmInfo{
    repeated alarm alarmList = 1;
}